{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 239,
  "lineage": "8ac89bde-8576-95c6-9e36-e0fcfeb7833a",
  "resources": [
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:474974640310:loadbalancer/app/app-alb2/8b49f287aa74afac",
            "arn_suffix": "app/app-alb2/8b49f287aa74afac",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb2-135789471.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:474974640310:loadbalancer/app/app-alb2/8b49f287aa74afac",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-063ffbf76d0addf06"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-027e08ee5d74f16d2"
              },
              {
                "subnet_id": "subnet-03775eac2b2ac8293"
              },
              {
                "subnet_id": "subnet-057c516fba74c9b99"
              },
              {
                "subnet_id": "subnet-05c787cf8ba07b7e0"
              }
            ],
            "subnets": [
              "subnet-027e08ee5d74f16d2",
              "subnet-03775eac2b2ac8293",
              "subnet-057c516fba74c9b99",
              "subnet-05c787cf8ba07b7e0"
            ],
            "tags": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb.module.alb.aws_security_group.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:474974640310:listener/app/app-alb2/8b49f287aa74afac/17eda1f98e4e9fdb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:474974640310:targetgroup/h120231113210226540900000002/da153876846ca47c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:474974640310:listener/app/app-alb2/8b49f287aa74afac/17eda1f98e4e9fdb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:474974640310:loadbalancer/app/app-alb2/8b49f287aa74afac",
            "port": 443,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_target_group.this",
            "module.alb.module.alb.aws_security_group.this",
            "module.app.module.ec2_instance.aws_iam_instance_profile.this",
            "module.app.module.ec2_instance.aws_instance.ignore_ami",
            "module.app.module.ec2_instance.aws_instance.this",
            "module.app.module.ec2_instance.aws_spot_instance_request.this",
            "module.app.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.app.module.ec2_sg.aws_security_group.this",
            "module.app.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.app.module.key_pair.aws_key_pair.this",
            "module.app.module.key_pair.tls_private_key.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex-instance",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:474974640310:targetgroup/h120231113210226540900000002/da153876846ca47c",
            "arn_suffix": "targetgroup/h120231113210226540900000002/da153876846ca47c",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:474974640310:targetgroup/h120231113210226540900000002/da153876846ca47c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "false",
            "name": "h120231113210226540900000002",
            "name_prefix": "h1",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.app.module.ec2_instance.aws_iam_instance_profile.this",
            "module.app.module.ec2_instance.aws_instance.ignore_ami",
            "module.app.module.ec2_instance.aws_instance.this",
            "module.app.module.ec2_instance.aws_spot_instance_request.this",
            "module.app.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.app.module.ec2_sg.aws_security_group.this",
            "module.app.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.app.module.key_pair.aws_key_pair.this",
            "module.app.module.key_pair.tls_private_key.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex-instance",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:474974640310:targetgroup/h120231113210226540900000002/da153876846ca47c-20231113210229726900000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:474974640310:targetgroup/h120231113210226540900000002/da153876846ca47c",
            "target_id": "i-06c89ff5e8ec8f8df"
          },
          "dependencies": [
            "module.alb.module.alb.aws_lambda_permission.this",
            "module.alb.module.alb.aws_lb_target_group.this",
            "module.app.module.ec2_instance.aws_iam_instance_profile.this",
            "module.app.module.ec2_instance.aws_instance.ignore_ami",
            "module.app.module.ec2_instance.aws_instance.this",
            "module.app.module.ec2_instance.aws_spot_instance_request.this",
            "module.app.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.app.module.ec2_sg.aws_security_group.this",
            "module.app.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.app.module.key_pair.aws_key_pair.this",
            "module.app.module.key_pair.tls_private_key.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:security-group/sg-063ffbf76d0addf06",
            "description": "Security group for app-alb2 application load balancer",
            "egress": [],
            "id": "sg-063ffbf76d0addf06",
            "ingress": [],
            "name": "app-alb2-20231113210206293800000001",
            "name_prefix": "app-alb2-",
            "owner_id": "474974640310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:security-group-rule/sgr-0e3e2b7825311b42f",
            "cidr_ipv4": "10.233.0.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0e3e2b7825311b42f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-063ffbf76d0addf06",
            "security_group_rule_id": "sgr-0e3e2b7825311b42f",
            "tags": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb.aws_security_group.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:security-group-rule/sgr-05a5214763125676c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-05a5214763125676c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-063ffbf76d0addf06",
            "security_group_rule_id": "sgr-05a5214763125676c",
            "tags": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Provisioner": "Terraform",
              "terraform-aws-modules": "alb"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb.aws_security_group.this",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app.module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094a0fafc1bf73bd6",
            "arn": "arn:aws:ec2:us-west-2:474974640310:instance/i-06c89ff5e8ec8f8df",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c89ff5e8ec8f8df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "app-dev2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027c9734967a9567c",
            "private_dns": "ip-10-233-0-95.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.233.0.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1a8027fd5824a69",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e9920d4c3b981a5",
            "tags": {
              "Environment": "Development",
              "Name": "app-dev2",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "app-dev2",
              "Provisioner": "Terraform"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "app-dev2"
            },
            "vpc_security_group_ids": [
              "sg-02ed6f3cbdfde57a8"
            ]
          },
          "dependencies": [
            "module.app.module.ec2_instance.aws_iam_instance_profile.this",
            "module.app.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.app.module.ec2_sg.aws_security_group.this",
            "module.app.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.app.module.key_pair.aws_key_pair.this",
            "module.app.module.key_pair.tls_private_key.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:security-group/sg-02ed6f3cbdfde57a8",
            "description": "Security group which is used as an argument in the app",
            "egress": [],
            "id": "sg-02ed6f3cbdfde57a8",
            "ingress": [],
            "name": "app-dev2-sg-20231113210206407900000001",
            "name_prefix": "app-dev2-sg-",
            "owner_id": "474974640310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "app-dev2-sg",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "app-dev2-sg",
              "Provisioner": "Terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.233.8.0/24"
            ],
            "description": "Egress Rule",
            "from_port": 3306,
            "id": "sgrule-457083474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02ed6f3cbdfde57a8",
            "security_group_rule_id": "sgr-01361b8b37c31009d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.ec2_sg.aws_security_group.this",
            "module.app.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.233.4.0/24"
            ],
            "description": "Ingress Rule",
            "from_port": 8080,
            "id": "sgrule-2463529510",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02ed6f3cbdfde57a8",
            "security_group_rule_id": "sgr-0ba7c516e3cd84ebc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.ec2_sg.aws_security_group.this",
            "module.app.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.233.4.0/24"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-2340650481",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02ed6f3cbdfde57a8",
            "security_group_rule_id": "sgr-076995c1ffb2fd9cf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.module.ec2_sg.aws_security_group.this",
            "module.app.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion.module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094a0fafc1bf73bd6",
            "arn": "arn:aws:ec2:us-west-2:474974640310:instance/i-0d149d7e714b8b1a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d149d7e714b8b1a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "bastion-dev2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e4f0d990322469a6",
            "private_dns": "ip-10-233-4-173.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.233.4.173",
            "public_dns": "ec2-54-188-18-52.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.18.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00db9f61a84ed767b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057c516fba74c9b99",
            "tags": {
              "Environment": "Development",
              "Name": "bastion-dev2",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "bastion-dev2",
              "Provisioner": "Terraform"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "bastion-dev2"
            },
            "vpc_security_group_ids": [
              "sg-0496d3ce545816ed1"
            ]
          },
          "dependencies": [
            "module.bastion.module.ec2_instance.aws_iam_instance_profile.this",
            "module.bastion.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.bastion.module.ec2_sg.aws_security_group.this",
            "module.bastion.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.bastion.module.key_pair.aws_key_pair.this",
            "module.bastion.module.key_pair.tls_private_key.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:security-group/sg-0496d3ce545816ed1",
            "description": "Security group which is used as an argument in the app",
            "egress": [],
            "id": "sg-0496d3ce545816ed1",
            "ingress": [],
            "name": "bastion-dev2-sg-20231113210206281500000001",
            "name_prefix": "bastion-dev2-sg-",
            "owner_id": "474974640310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-dev2-sg"
            },
            "tags_all": {
              "Name": "bastion-dev2-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.233.0.0/24"
            ],
            "description": "Egress Rule",
            "from_port": 22,
            "id": "sgrule-2108393436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0496d3ce545816ed1",
            "security_group_rule_id": "sgr-003931c9d571ad39b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.module.ec2_sg.aws_security_group.this",
            "module.bastion.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "191.185.21.206/32"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-2889035747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0496d3ce545816ed1",
            "security_group_rule_id": "sgr-00ce06476a6d8559e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.module.ec2_sg.aws_security_group.this",
            "module.bastion.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.db.module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.db.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094a0fafc1bf73bd6",
            "arn": "arn:aws:ec2:us-west-2:474974640310:instance/i-029a31a0c4d12fa91",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029a31a0c4d12fa91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "db-mysql-dev2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06038da1e4656a7d6",
            "private_dns": "ip-10-233-8-246.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.233.8.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c8c1c9e4ac9cc3c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0130ebd48f1993fc0",
            "tags": {
              "Environment": "Development",
              "Name": "db-mysql-dev2",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "db-mysql-dev2",
              "Provisioner": "Terraform"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "db-mysql-dev2"
            },
            "vpc_security_group_ids": [
              "sg-01d2e86b5436ea12f"
            ]
          },
          "dependencies": [
            "module.db.module.ec2_instance.aws_iam_instance_profile.this",
            "module.db.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.db.module.ec2_sg.aws_security_group.this",
            "module.db.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.db.module.key_pair.aws_key_pair.this",
            "module.db.module.key_pair.tls_private_key.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.db.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.db.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:security-group/sg-01d2e86b5436ea12f",
            "description": "Security group which is used as an argument in the app",
            "egress": [],
            "id": "sg-01d2e86b5436ea12f",
            "ingress": [],
            "name": "db-mysql-dev2-sg-20231113210206553200000001",
            "name_prefix": "db-mysql-dev2-sg-",
            "owner_id": "474974640310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "db-mysql-dev2-sg",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "db-mysql-dev2-sg",
              "Provisioner": "Terraform"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db.module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.db.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.233.0.0/24"
            ],
            "description": "Ingress Rule",
            "from_port": 3306,
            "id": "sgrule-3257341883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d2e86b5436ea12f",
            "security_group_rule_id": "sgr-000daaa49ec80c26e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db.module.ec2_sg.aws_security_group.this",
            "module.db.module.ec2_sg.aws_security_group.this_name_prefix",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:network-acl/acl-0a2247e684a80cdbf",
            "default_network_acl_id": "acl-0a2247e684a80cdbf",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a2247e684a80cdbf",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "474974640310",
            "subnet_ids": [
              "subnet-004164bfb87a0e111",
              "subnet-00e9920d4c3b981a5",
              "subnet-027e08ee5d74f16d2",
              "subnet-03775eac2b2ac8293",
              "subnet-057c516fba74c9b99",
              "subnet-05c787cf8ba07b7e0",
              "subnet-06b98dfd015185771",
              "subnet-0b7b5b4626365dc97",
              "subnet-0dacdf96ca2f7b5f4",
              "subnet-0db112655519a30ac"
            ],
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-default",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-default",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:route-table/rtb-017336f865d181c6f",
            "default_route_table_id": "rtb-017336f865d181c6f",
            "id": "rtb-017336f865d181c6f",
            "owner_id": "474974640310",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-default",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-default",
              "Provisioner": "Terraform"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:security-group/sg-096b203e6eb997b2c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-096b203e6eb997b2c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "474974640310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-default",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-default",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eebcd695a9edebd4",
            "domain": "vpc",
            "id": "eipalloc-0eebcd695a9edebd4",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-201-24-76.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.24.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2a",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2a",
              "Provisioner": "Terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cb90d76a1124364",
            "domain": "vpc",
            "id": "eipalloc-00cb90d76a1124364",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-167-92-217.us-west-2.compute.amazonaws.com",
            "public_ip": "35.167.92.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2b",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2b",
              "Provisioner": "Terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe6c01c5c36030e1",
            "domain": "vpc",
            "id": "eipalloc-0fe6c01c5c36030e1",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-228-72-50.us-west-2.compute.amazonaws.com",
            "public_ip": "44.228.72.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2c",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2c",
              "Provisioner": "Terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fb677dae7328c7c",
            "domain": "vpc",
            "id": "eipalloc-02fb677dae7328c7c",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-81-177-97.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.177.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2d",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2d",
              "Provisioner": "Terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:internet-gateway/igw-036b80624ae5cc09a",
            "id": "igw-036b80624ae5cc09a",
            "owner_id": "474974640310",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eebcd695a9edebd4",
            "association_id": "eipassoc-0980f271292cf5d4e",
            "connectivity_type": "public",
            "id": "nat-04b51eddba0118f85",
            "network_interface_id": "eni-02d8011670d9c542b",
            "private_ip": "10.233.4.114",
            "public_ip": "54.201.24.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057c516fba74c9b99",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2a",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2a",
              "Provisioner": "Terraform"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cb90d76a1124364",
            "association_id": "eipassoc-0f92ed0b0677cd43b",
            "connectivity_type": "public",
            "id": "nat-03cb189f2844ecdef",
            "network_interface_id": "eni-0385e5beeea1a2e99",
            "private_ip": "10.233.5.215",
            "public_ip": "35.167.92.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027e08ee5d74f16d2",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2b",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2b",
              "Provisioner": "Terraform"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe6c01c5c36030e1",
            "association_id": "eipassoc-042e78ddb43cd6f50",
            "connectivity_type": "public",
            "id": "nat-07d55a982ccabc18b",
            "network_interface_id": "eni-0a27663b86dc8075c",
            "private_ip": "10.233.6.216",
            "public_ip": "44.228.72.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03775eac2b2ac8293",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2c",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2c",
              "Provisioner": "Terraform"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fb677dae7328c7c",
            "association_id": "eipassoc-01a13dc5305d963cb",
            "connectivity_type": "public",
            "id": "nat-0fab0cb1defed5a07",
            "network_interface_id": "eni-0a9ec4111de7b3b35",
            "private_ip": "10.233.7.94",
            "public_ip": "35.81.177.97",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05c787cf8ba07b7e0",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2d",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-us-west-2d",
              "Provisioner": "Terraform"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0baedce2c388b75da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04b51eddba0118f85",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0baedce2c388b75da",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0452641ef68aca3e11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03cb189f2844ecdef",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0452641ef68aca3e1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0433b81d4ba9cb8331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07d55a982ccabc18b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0433b81d4ba9cb833",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eb6552d07cf68d5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fab0cb1defed5a07",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb6552d07cf68d5d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-036b80624ae5cc09a",
            "id": "r-rtb-0cfb1da0bbf93bda51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cfb1da0bbf93bda5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:route-table/rtb-0baedce2c388b75da",
            "id": "rtb-0baedce2c388b75da",
            "owner_id": "474974640310",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2a",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2a",
              "Provisioner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:route-table/rtb-0452641ef68aca3e1",
            "id": "rtb-0452641ef68aca3e1",
            "owner_id": "474974640310",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2b",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2b",
              "Provisioner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:route-table/rtb-0433b81d4ba9cb833",
            "id": "rtb-0433b81d4ba9cb833",
            "owner_id": "474974640310",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2c",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2c",
              "Provisioner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:route-table/rtb-0eb6552d07cf68d5d",
            "id": "rtb-0eb6552d07cf68d5d",
            "owner_id": "474974640310",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2d",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2d",
              "Provisioner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:route-table/rtb-0cfb1da0bbf93bda5",
            "id": "rtb-0cfb1da0bbf93bda5",
            "owner_id": "474974640310",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-public",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-public",
              "Provisioner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035f90781d37f0710",
            "route_table_id": "rtb-0baedce2c388b75da",
            "subnet_id": "subnet-0130ebd48f1993fc0"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac30bf0d9eb8ef2c",
            "route_table_id": "rtb-0452641ef68aca3e1",
            "subnet_id": "subnet-0a3ffb89884ec3b84"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b41146a522b99d81",
            "route_table_id": "rtb-0433b81d4ba9cb833",
            "subnet_id": "subnet-0b7b5b4626365dc97"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fb4764581391f15",
            "route_table_id": "rtb-0eb6552d07cf68d5d",
            "subnet_id": "subnet-06b98dfd015185771"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a9a0985817720b8",
            "route_table_id": "rtb-0baedce2c388b75da",
            "subnet_id": "subnet-00e9920d4c3b981a5"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db8a31d2ecbc8123",
            "route_table_id": "rtb-0452641ef68aca3e1",
            "subnet_id": "subnet-0dacdf96ca2f7b5f4"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021c2613d5e5f63e8",
            "route_table_id": "rtb-0433b81d4ba9cb833",
            "subnet_id": "subnet-0db112655519a30ac"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eacdcb6a5d718bfb",
            "route_table_id": "rtb-0eb6552d07cf68d5d",
            "subnet_id": "subnet-004164bfb87a0e111"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033d5aab20be4b5a9",
            "route_table_id": "rtb-0cfb1da0bbf93bda5",
            "subnet_id": "subnet-057c516fba74c9b99"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cf414426228983f",
            "route_table_id": "rtb-0cfb1da0bbf93bda5",
            "subnet_id": "subnet-027e08ee5d74f16d2"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3a563fba6ae8bc4",
            "route_table_id": "rtb-0cfb1da0bbf93bda5",
            "subnet_id": "subnet-03775eac2b2ac8293"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090e34e00c0be3f25",
            "route_table_id": "rtb-0cfb1da0bbf93bda5",
            "subnet_id": "subnet-05c787cf8ba07b7e0"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-0130ebd48f1993fc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.233.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0130ebd48f1993fc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-db-us-west-2a",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-db-us-west-2a",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-0a3ffb89884ec3b84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.233.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3ffb89884ec3b84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-db-us-west-2b",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-db-us-west-2b",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-0b7b5b4626365dc97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.233.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7b5b4626365dc97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-db-us-west-2c",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-db-us-west-2c",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-06b98dfd015185771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.233.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b98dfd015185771",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-db-us-west-2d",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-db-us-west-2d",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-00e9920d4c3b981a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.233.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e9920d4c3b981a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2a",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2a",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-0dacdf96ca2f7b5f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.233.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dacdf96ca2f7b5f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2b",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2b",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-0db112655519a30ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.233.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db112655519a30ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2c",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2c",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-004164bfb87a0e111",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.233.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004164bfb87a0e111",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2d",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-private-us-west-2d",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-057c516fba74c9b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.233.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057c516fba74c9b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-public-us-west-2a",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-public-us-west-2a",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-027e08ee5d74f16d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.233.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027e08ee5d74f16d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-public-us-west-2b",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-public-us-west-2b",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-03775eac2b2ac8293",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.233.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03775eac2b2ac8293",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-public-us-west-2c",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-public-us-west-2c",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:subnet/subnet-05c787cf8ba07b7e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.233.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c787cf8ba07b7e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474974640310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure-public-us-west-2d",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure-public-us-west-2d",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-0dc138c6b6603e1fb"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:474974640310:vpc/vpc-0dc138c6b6603e1fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.233.0.0/16",
            "default_network_acl_id": "acl-0a2247e684a80cdbf",
            "default_route_table_id": "rtb-017336f865d181c6f",
            "default_security_group_id": "sg-096b203e6eb997b2c",
            "dhcp_options_id": "dopt-044aa37b4c34b6ba6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc138c6b6603e1fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017336f865d181c6f",
            "owner_id": "474974640310",
            "tags": {
              "Environment": "Development",
              "Name": "demo_structure",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "demo_structure",
              "Provisioner": "Terraform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}